recursion.cons.min.Min.scala.error
Erreur de compilation :
Min:9: error: illegal start of simple expression
  var t = l.tail
  ^