recursion.cons.min.Min.scala.code
def min(l:List[Int]): Int = {
  
	if (l == Nil)
  return l.head
  if(l.head > l.tail.head)
  return min(l.tail)
  else
  var t = l.tail
  var a = l.head
  return min(a::t)


  
  
}